Add the character editor.